added java code to connect to mongodb, initialize a database, and insert question/aswer data for quizzes

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@
 bin/
 requirements.txt
 .vscode
-.java_connect_db/pom.xml
+java_connect_db/pom.xml
+java_connect_db/target/
+java_connect_db/src/test/
